<resources>
    <string name="app_name">USTH Weather</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="weather_description">Weather Icon</string>
    <string name="today_weather">12C</string>
    <string name="weather_location">England</string>

    <!-- Days of week -->
    <string name="monday">Thứ hai</string>
    <string name="tuesday">Thứ ba</string>
    <string name="wednesday">Thứ tư</string>
    <string name="thursday">Thứ năm</string>
    <string name="friday">Thứ sáu</string>
    <string name="saturday">Thứ bảy</string>
    <string name="sunday">Chủ nhật</string>

    <!-- Weather   -->
    <string name="sunny">Nắng nóng</string>
    <string name="windy">Gió lớn</string>
    <string name="party_cloudy">Trời nhiều mây</string>
    <string name="thunderstorm">Bão</string>
    <string name="foggy">Nhiều sương</string>
    <string name="partly_sunny">Nắng nhẹ</string>
    <string name="rainy">Mưa</string>
</resources>
