<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherandForecastFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WeatherFragment">
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:id="@+id/weatherFragment"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/forecastFragment"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/monday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/party_cloudy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="22-30" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tuesday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/windy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="20-26" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/wednesday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/foggy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="18-23" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/thursday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/partly_sunny" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="19-25" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/friday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/party_cloudy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="20-25" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/saturday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/rainy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="18-23" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/sunday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/rainy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="16-20" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/monday"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="47dp"
                    android:src="@drawable/images" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/thunderstorm" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:gravity="center_vertical"
                        android:text="16-19" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>